--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_GOOGLE_API_KEY=AIzaSyA0WBBSjnjV5FzqnwqP1DCaOSFJWYE5nr0
-REACT_APP_BACKEND_URL=http://localhost:5000/api
-REACT_APP_ASSET_URL=http://localhost:5000
+REACT_APP_GOOGLE_API_KEY=your key
+REACT_APP_BACKEND_URL=your key
+REACT_APP_ASSET_URL=your key
