--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_GOOGLE_API_KEY=AIzaSyA0WBBSjnjV5FzqnwqP1DCaOSFJWYE5nr0
-REACT_APP_BACKEND_URL=https://app-mernimages.herokuapp.com/api
-REACT_APP_ASSET_URL=https://app-mernimages.herokuapp.com
+REACT_APP_GOOGLE_API_KEY=your key
+REACT_APP_BACKEND_URL=your key
+REACT_APP_ASSET_URL=your key
